--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -18,6 +18,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.7.2",
+    "standard": "^17.1.2",
     "vite": "^6.1.0"
+  },
+  "eslintConfig": {
+    "extends": ["./node_modules/standard/eslintrc.json"]
   }
 }
